release/0.3.0/_sources/pages/example_workflows/locomanipulation/step_5_evaluation.rst.txt
Closed-Loop Policy Inference and Evaluation
-------------------------------------------

This workflow demonstrates running the trained GR00T N1.6 policy in closed-loop
and evaluating it in Arena G1 Loco Manipulation Task environment.


**Docker Container**: Base (see :doc:`../../quickstart/installation` for more details)

:docker_run_default:

Once inside the container, set the dataset and models directories.

.. code:: bash

    export DATASET_DIR=/datasets/isaaclab_arena/locomanipulation_tutorial
    export MODELS_DIR=/models/isaaclab_arena/locomanipulation_tutorial

Note that this tutorial assumes that you've completed the
:doc:`preceding step (Policy Training) <step_4_policy_training>` or downloaded the
pre-trained model checkpoint below:

.. dropdown:: Download Pre-trained Model (skip preceding steps)
   :animate: fade-in

   These commands can be used to download the pre-trained GR00T N1.6 policy checkpoint,
   such that the preceding steps can be skipped.
   This step requires the Hugging Face CLI, which can be installed by following the
   `official instructions <https://huggingface.co/docs/huggingface_hub/installation>`_.

   To download run:

   .. code-block:: bash

      hf download \
         --revision gn1_6 \
         nvidia/GN1x-Tuned-Arena-G1-Loco-Manipulation \
         --local-dir $MODELS_DIR/checkpoint-20000


**Prerequisite: launch the GR00T policy server**

The Arena evaluation client runs in the Base container and connects to a GR00T policy server.
Before running the evaluation, open another terminal **outside the Arena development
container**.
The server runs out of
the `Isaac-GR00T <https://github.com/NVIDIA/Isaac-GR00T/tree/e29d8fc50b0e4745120ae3fb72447986fe638aa6>`_
submodule pinned at commit ``e29d8fc``; populate it with
``git submodule update --init submodules/Isaac-GR00T`` if it is not already
checked out. Then, from the repository root in that terminal, launch the server and
leave it running:

.. note::

   Blackwell GPUs with compute capability ``sm_120`` require CUDA 12.8 or newer. The
   `official GR00T documentation <https://github.com/NVIDIA/Isaac-GR00T/blob/e29d8fc50b0e4745120ae3fb72447986fe638aa6/README.md?plain=1#L102>`_
   specifies CUDA 12.8 and ``pytorch-cu128`` for RTX 5090 systems. Please refer to the
   documentation for the latest requirements.

.. note::

   ``$MODELS_DIR`` exists inside the container. On the host, the checkpoint is
   under the models directory passed to ``./docker/run_docker.sh -m`` (default ``$HOME/models``).

.. code-block:: bash

   cd submodules/Isaac-GR00T
   uv run python gr00t/eval/run_gr00t_server.py \
     --modality-config-path ../../isaaclab_arena_gr00t/embodiments/g1/g1_sim_wbc_data_config.py \
     --model-path $HOME/models/isaaclab_arena/locomanipulation_tutorial/checkpoint-20000 \
     --embodiment-tag NEW_EMBODIMENT \
     --device cuda --host 127.0.0.1 --port 5555


Step 1: Run Single Environment Evaluation
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

We first run the policy in a single environment with visualization via the GUI.

The Arena GR00T evaluation client is configured by a config file at ``isaaclab_arena_gr00t/g1_locomanip_gr00t_closedloop_config.yaml``.

.. dropdown:: Configuration file (``g1_locomanip_gr00t_closedloop_config.yaml``):
   :animate: fade-in

   .. code-block:: yaml

      language_instruction: "Pick up the brown box from the shelf, and place it into the blue bin on the table located at the right of the shelf."
      action_horizon: 50
      embodiment_tag: NEW_EMBODIMENT
      video_backend: decord
      modality_config_path: isaaclab_arena_gr00t/embodiments/g1/g1_sim_wbc_data_config.py

      policy_joints_config_path: isaaclab_arena_gr00t/embodiments/g1/gr00t_43dof_joint_space.yaml
      action_joints_config_path: isaaclab_arena_gr00t/embodiments/g1/43dof_joint_space.yaml
      state_joints_config_path: isaaclab_arena_gr00t/embodiments/g1/43dof_joint_space.yaml

      action_chunk_length: 50
      pov_cam_name_sim: "robot_head_cam_rgb"

      task_mode_name: g1_locomanipulation

Test the policy in a single environment with visualization via the GUI run:

.. code-block:: bash

   python isaaclab_arena/evaluation/policy_runner.py \
     --viz kit \
     --policy_type isaaclab_arena_gr00t.policy.gr00t_remote_closedloop_policy.Gr00tRemoteClosedloopPolicy \
     --policy_config_yaml_path isaaclab_arena_gr00t/policy/config/g1_locomanip_gr00t_closedloop_config.yaml \
     --remote_host 127.0.0.1 \
     --remote_port 5555 \
     --num_steps 1500 \
     --enable_cameras \
     galileo_g1_locomanip_pick_and_place \
     --object brown_box \
     --embodiment g1_wbc_joint

The evaluation should produce the following output on the console at the end of the evaluation.
You should see similar metrics.

Note that all these metrics are computed over the entire evaluation process, and are affected
by the quality of post-trained policy, the quality of the dataset, and number of steps in the evaluation.

.. code-block:: text

   Metrics: {success_rate: 1.0, num_episodes: 1}

Step 2: Run Parallel Environments Evaluation
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Parallel evaluation of the policy in multiple parallel environments is also supported by the policy runner.

.. tab-set::

   .. tab-item:: Single GPU Evaluation

      Test the policy in 5 parallel environments with visualization via the GUI run:

      .. code-block:: bash

         python isaaclab_arena/evaluation/policy_runner.py \
           --viz kit \
           --policy_type isaaclab_arena_gr00t.policy.gr00t_remote_closedloop_policy.Gr00tRemoteClosedloopPolicy \
           --policy_config_yaml_path isaaclab_arena_gr00t/policy/config/g1_locomanip_gr00t_closedloop_config.yaml \
           --remote_host 127.0.0.1 \
           --remote_port 5555 \
           --num_steps 1200 \
           --num_envs 5 \
           --enable_cameras \
           --device cuda \
           --policy_device cuda  \
           galileo_g1_locomanip_pick_and_place \
           --object brown_box \
           --embodiment g1_wbc_joint

   .. tab-item:: Distribute Multi-GPU Evaluation

      Test the policy in 5 parallel environments on each GPU with 2 GPUs total run:

      .. code-block:: bash

         python -m torch.distributed.run --nnode=1 --nproc_per_node=2 isaaclab_arena/evaluation/policy_runner.py \
           --policy_type isaaclab_arena_gr00t.policy.gr00t_remote_closedloop_policy.Gr00tRemoteClosedloopPolicy \
           --policy_config_yaml_path isaaclab_arena_gr00t/policy/config/g1_locomanip_gr00t_closedloop_config.yaml \
           --remote_host 127.0.0.1 \
           --remote_port 5555 \
           --num_steps 1200 \
           --num_envs 5 \
           --enable_cameras \
           --device cuda \
           --policy_device cuda  \
           --distributed \
           --headless \
           galileo_g1_locomanip_pick_and_place \
           --object brown_box \
           --embodiment g1_wbc_joint


And during the evaluation, you should see the following output on the console at the end of the evaluation
indicating which environments are terminated (task-specific conditions like the brown box is placed into the blue bin,
or the episode length is exceeded by 30 seconds),
or truncated (if timeouts are enabled, like the maximum episode length is exceeded).

.. code-block:: text

   Resetting policy for terminated env_ids: tensor([3], device='cuda:0') and truncated env_ids: tensor([], device='cuda:0', dtype=torch.int64)

At the end of the evaluation, you should see the following output on the console indicating the metrics.
You can see that the success rate might not be 1.0 as more trials are being evaluated and randomizations are being introduced,
and the number of episodes is more than the single environment evaluation because of the parallelization.

.. code-block:: text

   Metrics: {'success_rate': 1.0, 'num_episodes': 4}

.. note::

   Note that the embodiment used in closed-loop policy inference is ``g1_wbc_joint``, which is different
   from ``g1_wbc_pink`` used in data generation.
   This is because during tele-operation, the upper body is controlled via target end-effector poses,
   which are realized by using the PINK IK controller, and the lower body is controlled via a WBC policy.
   GR00T N1.6 policy is trained on upper body joint positions and lower body WBC policy inputs, so we use
   ``g1_wbc_joint`` for closed-loop policy inference.

.. note::

   The policy was trained on datasets generated using CPU-based physics, therefore the evaluation uses ``--device cpu`` to ensure physics reproducibility.
   If you have GPU-generated datasets, you can switch to using GPU-based physics for evaluation by providing the ``--device cuda`` flag.
